Añadido el controlador de usuario con sus rutas y su documentación
