# routes/api.php
@@ -3,7 +3,7 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Auth\AuthController;
-
+use App\Http\Controllers\UserController;
 /*
 |--------------------------------------------------------------------------
 | API Routes
@@ -21,4 +21,14 @@ use App\Http\Controllers\Auth\AuthController;
 
 Route::post('/login', [AuthController::class,'login']);
 Route::post('/register', [AuthController::class,'register']);
+
+Route::get('/users', [UserController::class,'index']);
+Route::get('/users/{id}', [UserController::class,'show']);
+Route::put('/users/{id}', [UserController::class,'update']);
+Route::delete('/users/{id}', [UserController::class,'destroy']);
+Route::get('/details/ageavg', [UserController::class,'ageAvg']);
+Route::get('/details/countbysex', [UserController::class,'countBySex']);
+Route::get('/details/oldestuser', [UserController::class,'maxAgeUser']);
+Route::get('/details/younger', [UserController::class,'minAgeUser']);
+
 
